test/errors/packages_error/zs/import_in_default_package_error.zs
import simple_database.*;

struct DefaultPacakgeImport
{
    int32 value;
};